<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#51E8D6DC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".UpdateCard">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textFontWeight="800"
        android:text="@string/update_details"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:gravity="center"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/create_title"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_edittetext"
        android:hint="@string/enter_task"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#BFBBBB"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/create_priority"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittetext"
        android:hint="@string/priority"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#BFBBBB"
        tools:ignore="Autofill,TextFields" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">
        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"/>

        <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#ED0707"
            android:text="@string/delete"/>
    </LinearLayout>

</LinearLayout>